k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lapi-hotel-system
spec:
  selector:
    matchLabels:
      app: lapi-hotel-system
  serviceName: lapi-hotel-system
  replicas: 1
  template:
    metadata:
      labels:
        app: lapi-hotel-system
    spec:
      containers:
      - name: lapi-hotel-system
        image: dragoneena12/lapi-hotel-system:latest
        ports:
        - containerPort: 4000
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
