k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lapi-hotel-system
spec:
  selector:
    app: lapi-hotel-system
  ports:
    - protocol: TCP
      port: 4000
