k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lapi-hotel-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: api.lapi.tokyo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lapi-hotel-system
            port:
              number: 4000
  tls:  
  - hosts:
    - api.lapi.tokyo
    secretName: lapi-hotel-system-tls
